@@ -4,6 +4,8 @@ pve-container (1.0-21) unstable; urgency=medium
 
   * destroy: check if container is still running
 
+  * LXC::Setup: Load required host files in new()
+
  -- Proxmox Support Team <support@proxmox.com>  Wed, 04 Nov 2015 11:23:00 +0100
 
 pve-container (1.0-20) unstable; urgency=medium
